# gpt-fast

./: .gitignore  environment.yml
kernel_ext/: CMakeLists.txt  setup.py
kernel_ext/kernel_ext/: kernel.cu
kernel_ext/kernel_ext-stubs/: __init__.pyi
mixtral-moe/: model.py  tp.py
moe-layer/: dist.py  main.py  moe.py
